Add complete Arabic translations and image support

--- a/index.html
+++ b/index.html
@@ -199,56 +199,56 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <i class="fas fa-image"></i>
+                        <img src="images/hero-bg.jpg" alt="Corporate Exhibition" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Corporate Exhibition</h3>
-                        <p>Modern booth design for tech company</p>
+                        <h3 data-en="Corporate Exhibition" data-ar="معرض الشركات">Corporate Exhibition</h3>
+                        <p data-en="Modern booth design for tech company" data-ar="تصميم جناح حديث لشركة تقنية">Modern booth design for tech company</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <i class="fas fa-image"></i>
+                        <img src="images/about-image.jpg" alt="Trade Show Booth" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Trade Show Booth</h3>
-                        <p>Interactive exhibition space</p>
+                        <h3 data-en="Trade Show Booth" data-ar="جناح المعرض التجاري">Trade Show Booth</h3>
+                        <p data-en="Interactive exhibition space" data-ar="مساحة معرض تفاعلية">Interactive exhibition space</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <i class="fas fa-image"></i>
+                        <img src="images/portfolio-1.jpg" alt="Product Launch" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Product Launch</h3>
-                        <p>Premium brand showcase</p>
+                        <h3 data-en="Product Launch" data-ar="إطلاق المنتج">Product Launch</h3>
+                        <p data-en="Premium brand showcase" data-ar="عرض علامة تجارية فاخرة">Premium brand showcase</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <i class="fas fa-image"></i>
+                        <img src="images/portfolio-2.jpg" alt="Conference Booth" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Conference Booth</h3>
-                        <p>Professional meeting space</p>
+                        <h3 data-en="Conference Booth" data-ar="جناح المؤتمر">Conference Booth</h3>
+                        <p data-en="Professional meeting space" data-ar="مساحة اجتماعات احترافية">Professional meeting space</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <i class="fas fa-image"></i>
+                        <img src="images/portfolio-3.jpg" alt="Retail Exhibition" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Retail Exhibition</h3>
-                        <p>Engaging customer experience</p>
+                        <h3 data-en="Retail Exhibition" data-ar="معرض التجزئة">Retail Exhibition</h3>
+                        <p data-en="Engaging customer experience" data-ar="تجربة عملاء جذابة">Engaging customer experience</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <i class="fas fa-image"></i>
+                        <img src="images/portfolio-4.jpg" alt="Industry Showcase" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
-                        <h3>Industry Showcase</h3>
-                        <p>Large-scale event display</p>
+                        <h3 data-en="Industry Showcase" data-ar="عرض الصناعة">Industry Showcase</h3>
+                        <p data-en="Large-scale event display" data-ar="عرض فعالية واسعة النطاق">Large-scale event display</p>
                     </div>
                 </div>
             </div>
@@ -259,29 +259,29 @@
     <section class="why-choose">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Why Choose Eventak?</h2>
+                <h2 class="section-title" data-en="Why Choose Eventak?" data-ar="لماذا تختار إيفنتاك؟">Why Choose Eventak?</h2>
                 <div class="title-underline"></div>
             </div>
             <div class="why-grid">
                 <div class="why-card">
                     <div class="why-number">01</div>
-                    <h3>Experience & Expertise</h3>
-                    <p>Years of experience in creating memorable event experiences across Saudi Arabia.</p>
+                    <h3 data-en="Experience & Expertise" data-ar="الخبرة والكفاءة">Experience & Expertise</h3>
+                    <p data-en="Years of experience in creating memorable event experiences across Saudi Arabia." data-ar="سنوات من الخبرة في إنشاء تجارب فعاليات لا تُنسى في جميع أنحاء المملكة العربية السعودية.">Years of experience in creating memorable event experiences across Saudi Arabia.</p>
                 </div>
                 <div class="why-card">
                     <div class="why-number">02</div>
-                    <h3>Custom Solutions</h3>
-                    <p>Every project is unique. We design solutions tailored to your specific needs and goals.</p>
+                    <h3 data-en="Custom Solutions" data-ar="حلول مخصصة">Custom Solutions</h3>
+                    <p data-en="Every project is unique. We design solutions tailored to your specific needs and goals." data-ar="كل مشروع فريد من نوعه. نصمم حلولاً مصممة خصيصاً لاحتياجاتك وأهدافك المحددة.">Every project is unique. We design solutions tailored to your specific needs and goals.</p>
                 </div>
                 <div class="why-card">
                     <div class="why-number">03</div>
-                    <h3>Quality Craftsmanship</h3>
-                    <p>Premium materials and skilled craftsmanship ensure your booth exceeds expectations.</p>
+                    <h3 data-en="Quality Craftsmanship" data-ar="حرفية عالية الجودة">Quality Craftsmanship</h3>
+                    <p data-en="Premium materials and skilled craftsmanship ensure your booth exceeds expectations." data-ar="المواد الفاخرة والحرفية الماهرة تضمن أن يتجاوز جناحك التوقعات.">Premium materials and skilled craftsmanship ensure your booth exceeds expectations.</p>
                 </div>
                 <div class="why-card">
                     <div class="why-number">04</div>
-                    <h3>Full-Service Approach</h3>
-                    <p>From concept to completion, we handle every aspect of your event booth project.</p>
+                    <h3 data-en="Full-Service Approach" data-ar="نهج الخدمة الشاملة">Full-Service Approach</h3>
+                    <p data-en="From concept to completion, we handle every aspect of your event booth project." data-ar="من الفكرة إلى الإنجاز، نتعامل مع كل جانب من جوانب مشروع جناح الفعالية الخاص بك.">From concept to completion, we handle every aspect of your event booth project.</p>
                 </div>
             </div>
         </div>
@@ -297,33 +297,33 @@
             </div>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Contact Information</h3>
+                    <h3 data-en="Contact Information" data-ar="معلومات الاتصال">Contact Information</h3>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
-                            <h4>Location</h4>
-                            <p>Riyadh, Saudi Arabia</p>
+                            <h4 data-en="Location" data-ar="الموقع">Location</h4>
+                            <p data-en="Riyadh, Saudi Arabia" data-ar="الرياض، المملكة العربية السعودية">Riyadh, Saudi Arabia</p>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
                         <div>
-                            <h4>Phone</h4>
+                            <h4 data-en="Phone" data-ar="الهاتف">Phone</h4>
                             <p>+966 XX XXX XXXX</p>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
                         <div>
-                            <h4>Email</h4>
+                            <h4 data-en="Email" data-ar="البريد الإلكتروني">Email</h4>
                             <p>info@eventak-sa.com</p>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-clock"></i>
                         <div>
-                            <h4>Business Hours</h4>
-                            <p>Sunday - Thursday: 9:00 AM - 6:00 PM</p>
+                            <h4 data-en="Business Hours" data-ar="ساعات العمل">Business Hours</h4>
+                            <p data-en="Sunday - Thursday: 9:00 AM - 6:00 PM" data-ar="الأحد - الخميس: 9:00 صباحاً - 6:00 مساءً">Sunday - Thursday: 9:00 AM - 6:00 PM</p>
                         </div>
                     </div>
                     <div class="social-links">
@@ -371,29 +371,29 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <img src="images/logo.png" alt="Eventak Logo" class="footer-logo">
-                    <p>Making your event vision a reality with innovative designs and exceptional service.</p>
+                    <p data-en="Making your event vision a reality with innovative designs and exceptional service." data-ar="نحول رؤية فعاليتك إلى واقع من خلال تصاميم مبتكرة وخدمة استثنائية.">Making your event vision a reality with innovative designs and exceptional service.</p>
                 </div>
                 <div class="footer-section">
-                    <h4>Quick Links</h4>
+                    <h4 data-en="Quick Links" data-ar="روابط سريعة">Quick Links</h4>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#home" data-en="Home" data-ar="الرئيسية">Home</a></li>
+                        <li><a href="#about" data-en="About" data-ar="عن إيفنتاك">About</a></li>
+                        <li><a href="#services" data-en="Services" data-ar="خدماتنا">Services</a></li>
+                        <li><a href="#portfolio" data-en="Portfolio" data-ar="معرض الأعمال">Portfolio</a></li>
+                        <li><a href="#contact" data-en="Contact" data-ar="اتصل بنا">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Services</h4>
+                    <h4 data-en="Services" data-ar="خدماتنا">Services</h4>
                     <ul>
-                        <li><a href="#services">Booth Design</a></li>
-                        <li><a href="#services">Construction</a></li>
-                        <li><a href="#services">Graphics & Branding</a></li>
-                        <li><a href="#services">Event Support</a></li>
+                        <li><a href="#services" data-en="Booth Design" data-ar="تصميم الأجنحة">Booth Design</a></li>
+                        <li><a href="#services" data-en="Construction" data-ar="البناء">Construction</a></li>
+                        <li><a href="#services" data-en="Graphics & Branding" data-ar="الرسومات والعلامة التجارية">Graphics & Branding</a></li>
+                        <li><a href="#services" data-en="Event Support" data-ar="دعم الفعاليات">Event Support</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Connect With Us</h4>
+                    <h4 data-en="Connect With Us" data-ar="تواصل معنا">Connect With Us</h4>
                     <div class="footer-social">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
@@ -403,7 +403,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 Eventak. All rights reserved. | Event & Exhibition Solutions in Riyadh, Saudi Arabia</p>
+                <p data-en="© 2026 Eventak. All rights reserved. | Event & Exhibition Solutions in Riyadh, Saudi Arabia" data-ar="© 2026 إيفنتاك. جميع الحقوق محفوظة. | حلول الفعاليات والمعارض في الرياض، المملكة العربية السعودية">© 2026 Eventak. All rights reserved. | Event & Exhibition Solutions in Riyadh, Saudi Arabia</p>
             </div>
         </div>
     </footer>
