Update image extensions to PNG and add new images

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/hero-bg.jpg" alt="Corporate Exhibition" loading="lazy">
+                        <img src="images/hero-bg.png" alt="Corporate Exhibition" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
                         <h3 data-en="Corporate Exhibition" data-ar="معرض الشركات">Corporate Exhibition</h3>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/about-image.jpg" alt="Trade Show Booth" loading="lazy">
+                        <img src="images/about-image.png" alt="Trade Show Booth" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
                         <h3 data-en="Trade Show Booth" data-ar="جناح المعرض التجاري">Trade Show Booth</h3>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-1.jpg" alt="Product Launch" loading="lazy">
+                        <img src="images/portfolio-1.png" alt="Product Launch" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
                         <h3 data-en="Product Launch" data-ar="إطلاق المنتج">Product Launch</h3>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-2.jpg" alt="Conference Booth" loading="lazy">
+                        <img src="images/portfolio-2.png" alt="Conference Booth" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
                         <h3 data-en="Conference Booth" data-ar="جناح المؤتمر">Conference Booth</h3>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-3.jpg" alt="Retail Exhibition" loading="lazy">
+                        <img src="images/portfolio-3.png" alt="Retail Exhibition" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
                         <h3 data-en="Retail Exhibition" data-ar="معرض التجزئة">Retail Exhibition</h3>
@@ -244,7 +244,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-4.jpg" alt="Industry Showcase" loading="lazy">
+                        <img src="images/portfolio-4.png" alt="Industry Showcase" loading="lazy">
                     </div>
                     <div class="portfolio-overlay">
                         <h3 data-en="Industry Showcase" data-ar="عرض الصناعة">Industry Showcase</h3>
